--- a/style.css
+++ b/style.css
@@ -2,4 +2,12 @@ body{
   width:100%;
   margin: 0px;
   padding: 0px;
+  background: #ddd;
+}
+
+main{
+  width: 30%;
+  margin: 2% auto;
+  background: #fff;
+  padding: 2% 5%;
 }
