--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ main{
 
 #title{
   text-align: center;
+  font-family: Lobster, Helvetica;
 }
 
 #description{
@@ -23,4 +24,9 @@ main{
 
 #description img{
   border-radius: 50%;
+}
+
+input[type="text"], input[type="email"], input[type="number"], select{
+  width: 100%;
+  height: 35px;
 }
