--- a/style.css
+++ b/style.css
@@ -30,3 +30,8 @@ input[type="text"], input[type="email"], input[type="number"], select{
   width: 100%;
   height: 35px;
 }
+
+textarea{
+  width: 100%;
+  height: 75px;
+}
