--- a/style.css
+++ b/style.css
@@ -35,3 +35,11 @@ textarea{
   width: 100%;
   height: 75px;
 }
+
+input[type="submit"]{
+  height: 45px;
+  width: 100%;
+  background: green;
+  color: #fff;
+  border-radius: 10px;
+}
