--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ main{
   margin: 2% auto;
   background: #fff;
   padding: 2% 5%;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 #title{
